--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,4 @@
 title: Portfolio Jorge Florencio Molina Peinado
 description: En esta web están expuestos algunos de mis dibujos de la asignatura VJ1204
+
+theme: jekyll-theme-merlot
