--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Portfolio Jorge Florencio Molina Peinado
-description: En esta web están expuestos algunos de mis dibujos de la asignatura VJ1204
+title: Diego bobo
+description: Por muchos más años de anormalidades y de enchufes rotos.
 
 theme: jekyll-theme-merlot
